// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chips /> Snapshots counter should match snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  borderColor="rgba(35, 27, 34, 0.4)"
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    disabled={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "flexShrink": 1,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots counter should match snapshot with more than one Chip 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "color": "#231B22",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      52
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Personal trainers
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "color": "#231B22",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      +999
    </Text>
  </View>,
]
`;

exports[`<Chips /> Snapshots icon should match selected snapshot 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Location
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Personal trainers
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Activities
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "color": "#231B22",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      8
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Language
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "color": "#231B22",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      8
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Categories
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Availability
    </Text>
  </View>,
]
`;

exports[`<Chips /> Snapshots selected should match snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  borderColor="rgba(35, 27, 34, 0.4)"
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#231B22",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    disabled={false}
    numberOfLines={1}
    selected={true}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 16,
        },
        {
          "color": "#FFFFFF",
          "flexShrink": 1,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots selected should match snapshot with more than one Chip 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#231B22",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#FFFFFF",
            "flexShrink": 1,
          },
        ]
      }
    >
      Personal trainers
    </Text>
  </View>,
]
`;

exports[`<Chips /> Snapshots should match snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  borderColor="rgba(35, 27, 34, 0.4)"
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    disabled={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "flexShrink": 1,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots should match snapshot with a long text 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  borderColor="rgba(35, 27, 34, 0.4)"
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    disabled={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "flexShrink": 1,
        },
      ]
    }
  >
    Classes with a very long text
  </Text>
</View>
`;

exports[`<Chips /> Snapshots should match snapshot with disabled prop 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  borderColor="rgba(35, 27, 34, 0.4)"
  disabled={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F5F5FA",
        "borderColor": "#F5F5FA",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
      },
    ]
  }
>
  <Text
    disabled={true}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 16,
        },
        {
          "color": "#8F8F8F",
          "flexShrink": 1,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots should match snapshot with more than one Chip 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    borderColor="rgba(35, 27, 34, 0.4)"
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9999,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      disabled={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          },
          {
            "flexShrink": 1,
          },
        ]
      }
    >
      Personal trainers
    </Text>
  </View>,
]
`;
